apps/nginx-example/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  namespace: nginx
spec:
  containers:
    - image: 'nginx:alpine'
      name: nginx
      ports:
        - containerPort: 80
          name: http-web-svc
          protocol: TCP
